--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest --config ./jest.config.json",
     "test:watch": "npm run test -- --watch",
-    "test2":"node --experimental-vm-modules node_modules/.bin/jest --config ./jest.config.json",
+    "test2": "node --experimental-vm-modules node_modules/.bin/jest --config ./jest.config.json",
     "start": "nodemon --exec babel-node index.js",
     "dev": "nodemon index"
   },
@@ -16,7 +16,8 @@
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg": "^8.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
